fix safari bug on iphone 13

--- a/styles/what-we-offer/services/service.css
+++ b/styles/what-we-offer/services/service.css
@@ -66,6 +66,12 @@
     }
   }
 }
+@media not all and (min-resolution: 0.001dpcm) {
+  .background-article {
+    display: none;
+    visibility: hidden;
+  }
+}
 
 .background-article::after {
   --position-bg-article: 1200px;
